# rag_helper

./: .gitignore  README.md  pyproject.toml
docs/api/: index.html  rag_helper.html  search.js
notebooks_and_pipelines/: Embedding_test.ipynb
src/rag_helper/: __init__.py  api.py  cli.py  interactive_cli.py  logger.py  query_library.py  query_library_manager.py  rag.py  utils.py
test_pipelines/: Makefile  testing.ipynb
tests/: conftest.py  test_api.py  test_api_cli_parity.py  test_cli.py  test_cli_docs.py  test_cli_output.py  test_cli_validation.py  test_edge_cases.py  test_index_integration.py  test_index_preservation.py  test_interactive_cli.py  test_interactive_cli_mock.py  test_library_robustness.py  test_logger.py  test_multi_embedding.py  test_processor_integration.py  test_query_library_manager_edge_cases.py  test_real_world_integration.py  test_similarity.py  test_type_filtering.py
