[project]
name = "rag-helper"
version = "0.1.0"
description = "A RAG system for similarity search in query libraries."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "openpyxl",
    "pandas",
    "pydantic",
    "python-dotenv",
    "scikit-learn",
    "sentence-transformers",
    "torch",
    "tqdm",
    "rich",
    "pytest",
    "pytest-cov",
    "ruff",
    "vulture",
    "pip>=26.0.1",
    "ipykernel>=7.2.0",
    "iprogress>=0.4",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.8",
]

[project.scripts]
rag-cli = "rag_helper.cli:main"
rag-cli-interactive = "rag_helper.interactive_cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
]
